--- a/LKWSpringerApp.Web/Views/Home/Index.cshtml
+++ b/LKWSpringerApp.Web/Views/Home/Index.cshtml
@@ -19,6 +19,9 @@
     <div class="row">
         <div class="col-md-3">
             <div class="list-group">
+                <a asp-controller="PinBoard" asp-action="Index" class="custom-button btn btn-outline-secondary list-group-item-action d-flex justify-content-center align-items-center my-2 py-2">
+                    <i class="fas fa-truck me-2"></i> Pin Board
+                </a>
                 <a asp-controller="Driver" asp-action="Index" class="custom-button btn btn-outline-secondary list-group-item-action d-flex justify-content-center align-items-center my-2 py-2">
                     <i class="fas fa-truck me-2"></i> Drivers
                 </a>
