--- a/LKWSpringerApp.Web/Views/Shared/_Layout.cshtml
+++ b/LKWSpringerApp.Web/Views/Shared/_Layout.cshtml
@@ -21,6 +21,9 @@
                         <a class="nav-link" asp-controller="Home" asp-action="Index">Home</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" asp-controller="PinBoard" asp-action="Index">Pin Board</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" asp-controller="Driver" asp-action="Index">Drivers</a>
                     </li>
                     <li class="nav-item">
